Menu button fix on mobile.

--- a/styles/sass/screen.sass
+++ b/styles/sass/screen.sass
@@ -142,6 +142,7 @@ p
 			a
 				text-transform: uppercase
 				color: $dark_gray
+				font-family: 'Open Sans Condensed', sans-serif
 				text-decoration: none
 				font-size: 18px
 				font-weight: 600
@@ -233,8 +234,6 @@ footer
 					display: block
 					height: 0px
 					.color-btn
-						position: absolute
-						top: 335px
 						margin-top: 0px
 					
 	.flex-control-nav
