--- a/styles/sass/views/_768.sass
+++ b/styles/sass/views/_768.sass
@@ -116,7 +116,7 @@ p
 				text-transform: uppercase
 				color: $dark_gray
 				text-decoration: none
-				font-size: 14px
+				font-size: 16px
 				font-weight: 600
 	footer
 		@include span(2.5 of 10 last)
@@ -185,6 +185,7 @@ footer
 						font-size: 18px
 						left: 0
 						top: 300px
+						position: absolute
 						margin: 0
 						margin-left: gutter(12)
 						
